@@ -197,6 +197,22 @@ $layout['dberrors'] =& $DB->errors;
 $SMARTY->assign_by_ref('menu', $LMS->MENU);
 
 require_once($_LIB_DIR.'/menu.php');
+if (!function_exists(menu_cmp)) {
+	function menu_cmp($a, $b)
+	{
+		if ($a['prio'] == $b['prio'])
+			return 0;
+		return ($a['prio'] < $b['prio']) ? -1 : 1;
+	}
+}
+
+// Adding USerpanel menuitems
+if($CONFIG['directories']['userpanel_dir'])
+        // be sure that Userpanel exists
+	        if(file_exists($CONFIG['directories']['userpanel_dir']."/lib/LMS.menu.php"))
+			require_once($CONFIG['directories']['userpanel_dir']."/lib/LMS.menu.php");
+		
+uasort($menu,"menu_cmp");
 
 $SMARTY->assign_by_ref('newmenu', $menu);
 $SMARTY->assign_by_ref('layout', $layout);
